// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expense Summary with no expense 1`] = `
<div>
  <h1>
     No expense returned 
  </h1>
</div>
`;

exports[`should render Expense Summary with one expense 1`] = `
<div>
  <h1>
     Viewing 
    1
     expense(s) totalling 
    $10.00
     
  </h1>
</div>
`;

exports[`should render Expense Summary with three expense 1`] = `
<div>
  <h1>
     Viewing 
    3
     expense(s) totalling 
    $114.56
     
  </h1>
</div>
`;
